# ghc-external-splices-plugin

./: CHANGELOG.md  cabal.project  ghc-external-splices-plugin.cabal
src/Splices/: Conversions.hs  Data.hs  Plugin.hs  Plugin.hs-boot
src/Splices/Serialise/: Class.hs  Instances.hs
test-pkg/: CHANGELOG.md  LICENSE  Main.hs  test-pkg.cabal
