cabal-version:       2.0
name:                ghc-external-splices-plugin
version:             8.8.1
synopsis:            Saving/loading TH splice results, as a plugin
-- description:
homepage:            https://gitlab.haskell.org/alp/ghc-external-splices-plugin
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              ???
maintainer:          alp@well-typed.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Splices.Conversions,
                       Splices.Data,
                       Splices.Plugin,
                       Splices.Serialise.Class,
                       Splices.Serialise.Instances
  build-depends:       base, ghc == 8.9.*,
                       bytestring == 0.10.*,
                       containers == 0.6.*,
                       directory == 1.3.*,
                       filepath == 1.4.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror